dav1d: add dav1d-all-layers flag

This will output all spatial layers if requested, defaults to false (the built-in dav1d
behavior would defaults this to true).

Fix suggested-by Maryla Ustarroz

Fixes #28776

(cherry picked from commit 6ffede3f445586e5d368de936666cabb84f6a16f)